--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,29 @@ configure(subprojects.findAll {!it.childProjects}) {
 		}
 	}
 }
+
+repositories {
+	mavenLocal()
+	jcenter()
+}
+
+apply plugin: "jacoco"
+
+task jacocoRootReport(type: org.gradle.testing.jacoco.tasks.JacocoReport) {
+	additionalSourceDirs = files(subprojects.sourceSets.main.allSource.srcDirs)
+	classDirectories = files(subprojects.sourceSets.main.output)
+	dependsOn = subprojects.test
+	executionData = files(subprojects.jacocoTestReport.executionData)
+	sourceDirectories = files(subprojects.sourceSets.main.allSource.srcDirs)
+
+	reports {
+		html.enabled = true
+		xml.enabled = true
+	}
+
+	onlyIf = { true }
+
+	doFirst {
+		executionData = files(executionData.findAll { it.exists() })
+	}
 }
