--- a/adaptive-media-blogs-web/build.gradle
+++ b/adaptive-media-blogs-web/build.gradle
@@ -2,7 +2,6 @@ sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
 
 dependencies {
-	provided group: "com.liferay", name: "com.liferay.adaptive.media.api", version: "1.0.0"
 	provided group: "com.liferay", name: "com.liferay.adaptive.media.content.transformer.api", version: "1.0.0"
 	provided group: "com.liferay", name: "com.liferay.adaptive.media.image.api", version: "1.0.0"
 	provided group: "com.liferay", name: "com.liferay.adaptive.media.web", version: "1.0.0"
@@ -14,4 +13,5 @@ dependencies {
 	provided group: "javax.portlet", name: "portlet-api", version: "2.0"
 	provided group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
+	provided project(":apps:adaptive-media:adaptive-media-api")
 }
