--- a/adaptive-media-image-service/build.gradle
+++ b/adaptive-media-image-service/build.gradle
@@ -10,7 +10,6 @@ dependencies {
 	compileInclude group: "org.jsoup", name: "jsoup", version: "1.10.2"
 
 	provided group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
-	provided group: "com.liferay", name: "com.liferay.adaptive.media.api", version: "1.0.0"
 	provided group: "com.liferay", name: "com.liferay.adaptive.media.image.api", version: "1.0.0"
 	provided group: "com.liferay", name: "com.liferay.exportimport.api", version: "2.1.0"
 	provided group: "com.liferay", name: "com.liferay.osgi.service.tracker.collections", version: "2.0.0"
@@ -19,6 +18,7 @@ dependencies {
 	provided group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
 	provided group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
 	provided group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
+	provided project(":apps:adaptive-media:adaptive-media-api")
 
 	testCompile group: "org.mockito", name: "mockito-core", version: "1.10.8"
 }
