--- a/adaptive-media-web/build.gradle
+++ b/adaptive-media-web/build.gradle
@@ -21,4 +21,5 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.http.whiteboard", version: "1.0.0"
+	compileOnly project(":apps:static:portal-configuration:portal-configuration-persistence")
 }
