--- a/adaptive-media-image-item-selector-impl/build.gradle
+++ b/adaptive-media-image-item-selector-impl/build.gradle
@@ -5,6 +5,6 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.adaptive.media.image.api", version: "1.0.0";
 	compileOnly group: "com.liferay", name: "com.liferay.adaptive.media.image.item.selector.api", version: "1.0.0";
 	compileOnly group: "com.liferay", name: "com.liferay.item.selector.api", version: "2.2.0"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.7.0"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 }
